--- a/privacy.html
+++ b/privacy.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-  <meta charset="UTF-8" />
-  <title>GPT 개인정보 보호정책</title>
-</head>
-<body>
-  <h1>GPT 개인정보 보호정책</h1>
-  <p><strong>지원사업 도우미 GPT</strong>는 사용자의 개인정보를 수집하거나 저장하지 않습니다.</p>
-  <ul>
-    <li>수집하는 정보: 없음</li>
-    <li>제3자 제공: 없음</li>
-    <li>쿠키/세션: 사용하지 않음</li>
-  </ul>
-  <p>이 정책은 2025년 7월 7일 기준입니다.</p>
-  <p>문의: heo7743@marsbot.kr</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Privacy Policy</title>
+  </head>
+  <body>
+    <h1>GPT 개인정보 보호정책</h1>
+    <p>본 GPT는 사용자로부터 어떤 개인정보도 수집하거나 저장하지 않습니다.</p>
+    <ul>
+      <li>수집 정보 없음</li>
+      <li>제3자 제공 없음</li>
+      <li>쿠키/세션 없음</li>
+    </ul>
+    <p>작성일: 2025년 7월 7일</p>
+    <p>문의: heo7743@marsbot.kr</p>
+  </body>
 </html>
